changed deployment and test process

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -5,8 +5,8 @@ setenv =
     AUDIOPYLE_HOME = {toxinidir}/..
 sitepackages = False
 deps =
-    pytest
+    discover
 recreate = True
 commands =
     ./deploy.sh
-    py.test
+    discover
