--- a/commons/Dockerfile
+++ b/commons/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:2-onbuild
+FROM python:2.7.11-wheezy
 
 # SETTING GLOBAL ENV FOR FURTHER USE
 ENV AUDIOPYLE_HOME "/audiopyle"
@@ -9,12 +9,17 @@ RUN mkdir -p "$AUDIOPYLE_HOME/commons"
 # CURRENT OPS WILL BE CALLED HERE
 WORKDIR "$AUDIOPYLE_HOME/commons"
 
-# COPY ONLY NECESSARY FILES
-ADD ./deploy.sh .
-RUN chmod -R 775 ./deploy.sh
+# COPY MODULE FILES
+ADD ./commons ./commons
 ADD ./requirements.txt .
 ADD ./setup.py .
-ADD ./commons ./commons
 
-# INSTALL REQUIREMENTS AND COMMONS MODULE
+# DEPLOY
+ADD ./deploy.sh .
+RUN chmod -R 775 ./deploy.sh
 RUN ./deploy.sh
+
+# INSTALL TEST FRAMEWORK AND RUN TESTS
+RUN pip install tox
+ADD ./tox.ini .
+RUN tox
