added deploy script, added VAMP_PATH, integrated tox for testing

--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -1,7 +1,24 @@
 FROM endlessdrones/audiopyle-commons:latest
 
-RUN pip install tox && \
-	    pip install numpy && \
-	    pip install vamp
+# CREATING DIR FOR THIS MODULE
+RUN mkdir -p "$AUDIOPYLE_HOME/xtracter"
 
-# SOME OTHER STEPS TO BUILD IMAGE FOR XTRACTER
+# CURRENT OPS WILL BE CALLED HERE
+WORKDIR "$AUDIOPYLE_HOME/xtracter"
+
+# COPY MODULE FILES
+ADD ./xtracter ./xtracter
+ADD ./devops ./devops
+ADD ./requirements.txt .
+ADD ./setup.py .
+
+# DEPLOY
+ADD ./deploy.sh .
+RUN chmod -R 775 ./deploy.sh
+RUN ./deploy.sh
+ENV VAMP_PATH "$AUDIOPYLE_HOME/xtracter/resources/vamp_plugins"
+
+# INSTALL TEST FRAMEWORK AND RUN TESTS
+RUN pip install tox
+ADD ./tox.ini .
+RUN tox
