changed dockerfile to try to force travis to build

--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -12,16 +12,16 @@ RUN apt-get install libc6-dev
 # COPY MODULE FILES
 ADD ./xtracter ./xtracter
 ADD ./devops ./devops
-ADD ./requirements.txt .
-ADD ./setup.py .
+ADD ./requirements.txt ./requirements.txt
+ADD ./setup.py ./setup.py
 
 # DEPLOY
-ADD ./deploy.sh .
+ADD ./deploy.sh ./deploy.sh
 RUN chmod -R 775 ./deploy.sh
 RUN ./deploy.sh
 ENV VAMP_PATH "$AUDIOPYLE_HOME/xtracter/resources/vamp_plugins"
 
 # INSTALL TEST FRAMEWORK AND RUN TESTS
 RUN pip install tox
-ADD ./tox.ini .
+ADD ./tox.ini ./tox.ini
 RUN tox
