trying to fix travis build

--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -6,8 +6,13 @@ RUN mkdir -p "$AUDIOPYLE_HOME/xtracter"
 # CURRENT OPS WILL BE CALLED HERE
 WORKDIR "$AUDIOPYLE_HOME/xtracter"
 
+RUN dpkg -l libc6
+
 # INSTALL GLIBC NECESSARY TO RUN SOME OF THE PLUGINS
 RUN apt-get install libc6-dev
+RUN apt-get install libc6
+
+RUN dpkg -l libc6
 
 # COPY MODULE FILES
 ADD ./xtracter ./xtracter
