Revert "Modify Dockerfiles to use branch images instead of latest"
This reverts commit 3033d2fc3d5e15422a7dc4a78662a345a3f42658.

--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -1,4 +1,4 @@
-FROM endlessdrones/audiopyle-commons:tests-audio-converter
+FROM endlessdrones/audiopyle-commons:latest
 
 # CREATING DIR FOR THIS MODULE
 RUN mkdir -p "$AUDIOPYLE_HOME/xtracter"
