--- a/commons/Dockerfile
+++ b/commons/Dockerfile
@@ -1,4 +1,4 @@
-FROM endlessdrones/audiopyle-base-image:tests-audio-converter
+FROM endlessdrones/audiopyle-base-image:latest
 
 # SETTING GLOBAL ENV FOR FURTHER USE
 ENV AUDIOPYLE_HOME "/audiopyle"
