Add basic Dockerfile, deploy.sh and tox.ini

--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -1,3 +1,22 @@
 FROM endlessdrones/audiopyle-commons:latest
 
-# SOME STEPS TO INSTALL CUSTOM IMAGE FOR COORDINATOR
+# CREATING DIR FOR THIS MODULE
+RUN mkdir -p "$AUDIOPYLE_HOME/coordinator"
+
+# CURRENT OPS WILL BE CALLED HERE
+WORKDIR "$AUDIOPYLE_HOME/coordinator"
+#
+# COPY MODULE FILES
+ADD ./coordinator ./coordinator
+ADD ./requirements.txt ./requirements.txt
+ADD ./setup.py ./setup.py
+
+# DEPLOY
+ADD ./deploy.sh ./deploy.sh
+RUN chmod -R 775 ./deploy.sh
+RUN bash ./deploy.sh
+
+# INSTALL TEST FRAMEWORK AND RUN TESTS
+RUN pip install tox
+ADD ./tox.ini ./tox.ini
+RUN tox
