--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+travis env set DOCKER_EMAIL mkorzeniowski93@gmail.com
+travis env set DOCKER_USERNAME endlessdrones
+travis env set DOCKER_PASSWORD h2bbIt9Wpcuf8x
+
 sudo: required
 
 language: python
@@ -5,12 +9,28 @@ language: python
 services:
   - docker
 
-#before_install:
-#  - docker build -t endlessdrones/audiopyle-commons ./commons
-#  - docker build -t endlessdrones/audiopyle-xtracter ./xtracter
-#  - docker build -t endlessdrones/audiopyle-coordinator ./coordinator
+before_install:
+  - pip install tox
+  - cd ./commons
+  - tox
+  - rm -rf .tox && rm -rf audiopyle_commons.egg-info
+  - cd ../coordinator
+  - tox
+  - rm -rf .tox && rm -rf .audiopyle_coordinator.egg-info
+  - cd ../xtracter
+  - tox
+  - rm -rf .tox && rm -rf .audiopyle_xtracter.egg-info
+  - cd ..
 
 script:
-  - docker build -t endlessdrones/audiopyle-commons ./commons
-  - docker build -t endlessdrones/audiopyle-xtracter ./xtracter
-  - docker build -t endlessdrones/audiopyle-coordinator ./coordinator
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-commons ./commons
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-coordinator ./coordinator
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-xtracter ./xtracter
+
+after_success:
+  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+    docker push "$DOCKER_USERNAME"/audiopyle-commons
+    docker push "$DOCKER_USERNAME"/audiopyle-coordinator
+    docker push "$DOCKER_USERNAME"/audiopyle-xtracter
+    fi
