--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -15,3 +15,12 @@ ADD ./setup.py ./setup.py
 ADD ./deploy.sh ./deploy.sh
 RUN chmod -R 775 ./deploy.sh
 RUN bash ./deploy.sh
+
+# INSTALL TEST FRAMEWORK AND RUN TESTS
+RUN pip install tox
+ADD ./tox.ini ./tox.ini
+RUN tox
+
+# CLEANUP AFTER TESTS
+RUN rm -rf .tox && rm -rf audiopyle_coordinator.egg-info
+RUN pip uninstall tox
