--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -19,3 +19,12 @@ ADD ./deploy.sh ./deploy.sh
 RUN chmod -R 775 ./deploy.sh
 RUN bash ./deploy.sh
 ENV VAMP_PATH "$AUDIOPYLE_HOME/xtracter/resources/vamp_plugins"
+
+# INSTALL TEST FRAMEWORK AND RUN TESTS
+RUN pip install tox
+ADD ./tox.ini ./tox.ini
+RUN tox
+
+# CLEANUP AFTER TESTS
+RUN rm -rf .tox && rm -rf audiopyle_xtracter.egg-info
+RUN pip uninstall tox
