added switch to uninstalling tox

--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -23,4 +23,4 @@ RUN tox
 
 # CLEANUP AFTER TESTS
 RUN rm -rf .tox && rm -rf audiopyle_coordinator.egg-info
-RUN pip uninstall tox
+RUN pip uninstall -y tox
