--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -27,4 +27,4 @@ RUN tox
 
 # CLEANUP AFTER TESTS
 RUN rm -rf .tox && rm -rf audiopyle_xtracter.egg-info
-RUN pip uninstall tox
+RUN pip uninstall -y tox
