ninja commit: fix image pushing

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,5 @@ script:
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
-    docker push "$DOCKER_USERNAME"/audiopyle-commons
-    docker push "$DOCKER_USERNAME"/audiopyle-coordinator
-    docker push "$DOCKER_USERNAME"/audiopyle-xtracter
+    bash ./push-docker-images.sh;
     fi
