switched to py.test instead of discover

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -5,8 +5,8 @@ setenv =
     AUDIOPYLE_HOME = {toxinidir}/..
 sitepackages = False
 deps =
-    discover
+    pytest
 recreate = True
 commands =
     ./deploy.sh
-    discover -v
+    py.test
