--- a/coordinator/tox.ini
+++ b/coordinator/tox.ini
@@ -6,8 +6,8 @@ setenv =
 sitepackages = False
 deps =
     {toxinidir}/../commons
-    discover
+    pytest
 recreate = True
 commands =
     ./deploy.sh
-    discover -v
+    py.test
