--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -8,6 +8,9 @@ engines:
     enabled: true
   pep8:
     enabled: true
+    checks:
+      E501:
+        enabled: false
   radon:
     enabled: true
     config:
@@ -19,3 +22,5 @@ ratings:
 
 exclude_paths:
 - "**/test/**"
+- "**/setup.py"
+- "**/resources/**"
