--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -5,8 +5,11 @@ setenv =
     AUDIOPYLE_HOME = {toxinidir}/..
 sitepackages = False
 deps =
-    pytest
+    nose
+    coverage
 recreate = True
 commands =
     ./deploy.sh
-    py.test
+    nosetests -v \
+        --cover-erase --with-coverage --cover-package=commons --cover-min-percentage=75 \
+        --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml --cover-html --cover-html-dir=audiopyle-commons-coverage
