--- a/coordinator/tox.ini
+++ b/coordinator/tox.ini
@@ -6,8 +6,11 @@ setenv =
 sitepackages = False
 deps =
     {toxinidir}/../commons
-    pytest
+    nose
+    coverage
 recreate = True
 commands =
     ./deploy.sh
-    py.test
+    nosetests -v \
+        --cover-erase --with-coverage --cover-package=coordinator --cover-min-percentage=75 \
+        --cover-xml --cover-xml-file=audiopyle-coordinator-coverage.xml --cover-html --cover-html-dir=audiopyle-coordinator-coverage
