--- a/xtracter/tox.ini
+++ b/xtracter/tox.ini
@@ -7,8 +7,11 @@ setenv =
 sitepackages = False
 deps =
     {toxinidir}/../commons
-    pytest
+    nose
+    coverage
 recreate = True
 commands =
     ./deploy.sh
-    py.test
+    nosetests -v \
+        --cover-erase --with-coverage --cover-package=xtracter --cover-min-percentage=75 \
+        --cover-xml --cover-xml-file=audiopyle-xtracter-coverage.xml --cover-html --cover-html-dir=audiopyle-xtracter-coverage
