add break line so it looks better

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -12,4 +12,5 @@ commands =
     ./deploy.sh
     nosetests -v \
         --cover-erase --with-coverage --cover-package=commons --cover-min-percentage=75 \
-        --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml --cover-html --cover-html-dir=audiopyle-commons-coverage
+        --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml \
+        --cover-html --cover-html-dir=audiopyle-commons-coverage
