--- a/xtracter/tox.ini
+++ b/xtracter/tox.ini
@@ -14,4 +14,5 @@ commands =
     ./deploy.sh
     nosetests -v \
         --cover-erase --with-coverage --cover-package=xtracter --cover-min-percentage=75 \
-        --cover-xml --cover-xml-file=audiopyle-xtracter-coverage.xml --cover-html --cover-html-dir=audiopyle-xtracter-coverage
+        --cover-xml --cover-xml-file=audiopyle-xtracter-coverage.xml \
+        --cover-html --cover-html-dir=audiopyle-xtracter-coverage
