changed order of travis build

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,15 +6,14 @@ services:
   - docker
 
 before_install:
-  - chmod 755 setup.sh
-  - bash setup.sh
+  - chmod 755 setup.sh && bash setup.sh
 
 script:
   - docker build -t "$DOCKER_USERNAME"/audiopyle-commons ./commons
   - docker build -t "$DOCKER_USERNAME"/audiopyle-coordinator ./coordinator
   - docker build -t "$DOCKER_USERNAME"/audiopyle-xtracter ./xtracter
-  - bash devops/run_code_analysis.sh
   - cd testcases && tox && cd ..
+  - bash devops/run_code_analysis.sh
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
