added entrypoint for docker run

--- a/xtracter/Dockerfile
+++ b/xtracter/Dockerfile
@@ -26,3 +26,7 @@ RUN tox
 # CLEANUP AFTER TESTS
 RUN rm -rf .tox && rm -rf audiopyle_xtracter.egg-info
 RUN pip uninstall -y tox
+
+# SET STARTUP SCRIPT AS ENTRYPOINT
+ADD ./start_xtracter.py ./start_xtracter.py
+ENTRYPOINT ["python ./start_xtracter.py"]
