--- a/resources/base-docker-image/Dockerfile
+++ b/resources/base-docker-image/Dockerfile
@@ -1,8 +1,8 @@
 FROM debian:jessie
 
-ADD ./install-os-deps.sh ./install-os-deps.sh
-ADD ./install-python.sh ./install-python.sh
-ADD ./cleanup.sh ./cleanup.sh
+COPY ./install-os-deps.sh ./install-os-deps.sh
+COPY ./install-python.sh ./install-python.sh
+COPY ./cleanup.sh ./cleanup.sh
 
 RUN bash ./install-os-deps.sh
 
