--- a/testcases/tox.ini
+++ b/testcases/tox.ini
@@ -7,6 +7,7 @@ sitepackages = False
 deps =
     -rrequirements.txt
     {toxinidir}/../commons
+    {toxinidir}/../xtracter
     nose
 recreate = True
 commands =
