updated tox.ini to include other modules in testcases

--- a/testcases/tox.ini
+++ b/testcases/tox.ini
@@ -7,7 +7,9 @@ sitepackages = False
 deps =
     -rrequirements.txt
     {toxinidir}/../commons
+    {toxinidir}/../coordinator
     {toxinidir}/../xtracter
+    {toxinidir}/../persister
     nose
 recreate = True
 commands =
