--- a/common/src/tox.ini
+++ b/common/src/tox.ini
@@ -12,5 +12,5 @@ commands =
     ./deploy.sh
     nosetests -v \
         --cover-erase --with-coverage --cover-package=commons --cover-min-percentage=75 \
-        --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml \
-        --cover-html --cover-html-dir=audiopyle-commons-coverage
+        --cover-xml --cover-xml-file=aapy.audiopyle-commons-commons-coverage.xml \
+        --cover-html --cover-html-dir=aapy.audiopyle-commons-commons-coverage
