added first part of a refactored code

--- a/audiopyle_commons/Dockerfile
+++ b/audiopyle_commons/Dockerfile
@@ -4,13 +4,15 @@ MAINTAINER mkorzeniowski93@gmail.com
 LABEL version="0.1"
 LABEL description="Image containing common functionalities of an audiopyle app"
 
+# CREATE AND SET DIRECTORIES
 RUN mkdir /commons
 WORKDIR /commons
 
+# COPY SOURCE CODE FOR AUDIOPYLE
 COPY ./src .
 
 # INSTALL MODULE DEPENDENCIES
-RUN pip install -r ./src/requirements.txt
+RUN pip install -r ./requirements.txt
 
 # INSTALL AUDIOPYLE COMMON
-pip install ./src
+RUN pip install .
