updated travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,17 +5,14 @@ language: python
 services:
   - docker
 
-before_install:
-  - chmod 755 setup.sh && bash setup.sh
-
 script:
   - docker build -t "$DOCKER_USERNAME"/audiopyle-commons ./commons
-  - docker build -t "$DOCKER_USERNAME"/audiopyle-coordinator ./coordinator
-  - docker build -t "$DOCKER_USERNAME"/audiopyle-xtracter ./xtracter
-  - cd testcases && tox && cd ..
-  - bash devops/run_code_analysis.sh
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-extracter ./extracter
+  - docker run --interactive --tty --rm --env CODECLIMATE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze
 
 after_success:
   - if [ "$TRAVIS_BRANCH" == "master" ]; then
-    bash devops/push_docker_images.sh;
+    docker login -e="$DOCKER_EMAIL" -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+    docker push "$DOCKER_USERNAME"/audiopyle-commons
+    docker push "$DOCKER_USERNAME"/audiopyle-extracter
     fi
