--- a/extracter/Dockerfile
+++ b/extracter/Dockerfile
@@ -4,25 +4,28 @@ MAINTAINER mkorzeniowski93@gmail.com
 LABEL version="0.1"
 LABEL description="Image containing extracter module of an audiopyle app"
 
-# CREATE AND SET DIRECTORIES
-RUN mkdir /extracter
-WORKDIR /extracter
+# SET WORKDIR
+RUN mkdir -p /audiopyle/extracter
+WORKDIR /audiopyle/extracter
 
 # ESPOSE HTTP PORT
 EXPOSE 8080
 
 # COPY SOURCE CODE FOR AUDIOPYLE EXTACTER
-COPY ./extracter .
-COPY ./http_server.conf .
-COPY ./app.py .
-COPY ./requirements.txt .
-COPY ./setup.py .
+COPY . .
+
+# CREATE DIRECTORY FOR INPUT FILES
+RUN mkdir /audio
+RUN mkdir /audio_tmp
+RUN mkdir /root/vamp
 
 # INSTALL MODULE DEPENDENCIES
 RUN pip install -r ./requirements.txt
 
 # INSTALL AUDIOPYLE EXTRACTER
 RUN pip install .
+
+RUN ls
 
 # DEFINE ENTRYPOINT AS EXTRACTER API
 ENTRYPOINT ["python", "./app.py"]
