--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ services:
   - docker
 
 before_script:
-  - ./setup.sh
+  - chmod u+x setup.sh && ./setup.sh
   - cd ./commons && tox && cd ..
 
 script:
