added more coverage options, reduced min percentage to 0 to pass build

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -9,6 +9,7 @@ deps =
 recreate = True
 commands =
     nosetests -v \
-        --cover-erase --with-coverage --cover-package=commons --cover-min-percentage=30 \
+        --cover-erase --with-coverage --cover-inclusive \
+        --cover-branches --cover-package=commons --cover-min-percentage=0 \
         --cover-xml --cover-xml-file=audiopyle-commons-coverage.xml \
         --cover-html --cover-html-dir=audiopyle-commons-coverage
