renamed analyzer -> extractor

--- a/extractor/Dockerfile
+++ b/extractor/Dockerfile
@@ -2,16 +2,16 @@ FROM endlessdrones/audiopyle-commons
 
 MAINTAINER mkorzeniowski93@gmail.com
 LABEL version="0.1"
-LABEL description="Image containing analyzer module of an audiopyle app"
+LABEL description="Image containing extractor module of an audiopyle app"
 
 # SET WORKDIR
-RUN mkdir -p /audiopyle/analyzer
-WORKDIR /audiopyle/analyzer
+RUN mkdir -p /audiopyle/extractor
+WORKDIR /audiopyle/extractor
 
 # ESPOSE PORTS
 EXPOSE 8080
 
-# COPY SOURCE CODE FOR AUDIOPYLE ANALYZER
+# COPY SOURCE CODE FOR AUDIOPYLE EXTRACTOR
 COPY . .
 
 # CREATE DIRECTORY FOR INPUT FILES
@@ -22,10 +22,10 @@ RUN mkdir /root/vamp
 # INSTALL MODULE DEPENDENCIES
 RUN pip install -r ./requirements.txt
 
-# INSTALL AUDIOPYLE ANALYZER
+# INSTALL AUDIOPYLE EXTRACTOR
 RUN pip install .
 
 RUN ls
 
-# DEFINE ENTRYPOINT AS EXTRACTER API
-ENTRYPOINT ["celery", "-A", "analyzer", "worker", "--loglevel=debug"]
+# DEFINE ENTRYPOINT AS EXTRACTOR API
+ENTRYPOINT ["celery", "-A", "extractor", "worker", "--loglevel=debug"]
