renamed comments analyzer -> extractor

--- a/coordinator/Dockerfile
+++ b/coordinator/Dockerfile
@@ -11,7 +11,7 @@ WORKDIR /audiopyle/coordinator
 # ESPOSE HTTP PORT
 EXPOSE 8080
 
-# COPY SOURCE CODE FOR AUDIOPYLE EXTACTER
+# COPY SOURCE CODE FOR AUDIOPYLE COORDINATOR
 COPY . .
 
 # CREATE DIRECTORY FOR INPUT FILES
@@ -22,10 +22,10 @@ RUN mkdir /root/vamp
 # INSTALL MODULE DEPENDENCIES
 RUN pip install -r ./requirements.txt
 
-# INSTALL AUDIOPYLE EXTRACTER
+# INSTALL AUDIOPYLE COORDINATOR
 RUN pip install .
 
 RUN ls
 
-# DEFINE ENTRYPOINT AS EXTRACTER API
+# DEFINE ENTRYPOINT AS COORDINATOR API
 ENTRYPOINT ["python", "./app.py"]
