hacking further to have numpy installed

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -1,8 +1,9 @@
 [tox]
 envlist = py27
 [testenv]
-sitepackages = True
+sitepackages = False
 deps =
+    {toxinidir}/../base-numpy
     -rrequirements.txt
     nose
     coverage
