reverting some hacks

--- a/commons/tox.ini
+++ b/commons/tox.ini
@@ -1,9 +1,8 @@
 [tox]
 envlist = py27
 [testenv]
-sitepackages = False
+sitepackages = True
 deps =
-    {toxinidir}/../base-numpy
     -rrequirements.txt
     nose
     coverage
