--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,6 @@ before_script:
 
 script:
   - docker build -t "$DOCKER_USERNAME"/audiopyle-commons ./commons
-  - docker build -t "$DOCKER_USERNAME"/audiopyle-extractor ./api
-  - docker build -t "$DOCKER_USERNAME"/audiopyle-coordinator ./api
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-extractor ./extractor
+  - docker build -t "$DOCKER_USERNAME"/audiopyle-coordinator ./coordinator
   - docker run --interactive --tty --rm --env CODECLIMATE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze
