Make base image use Alpine Linux instead of Jessie

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,25 +1,13 @@
-FROM debian:jessie-slim
+FROM python:alpine
 
 MAINTAINER mkorzeniowski93@gmail.com
-LABEL version="0.3"
-LABEL description="Docker image based on Debian 8 Jessie with python 2.7.13 installed and latest versions of pip and setuptools"
+LABEL version="0.4"
+LABEL description="Latest Python Alpine image with numpy and vamp"
 
-# copy necessary scripts
-COPY ./install_os_deps.sh ./install_os_deps.sh
-COPY ./install_python2.sh ./install_python2.sh
-COPY ./install_python2_base_modules.sh ./install_python2_base_modules.sh
 
-# install OS deps and python2
-RUN bash ./install_os_deps.sh
-RUN bash ./install_python2.sh
+RUN apk update \
+    && apk add --no-cache g++ \
+	&& pip install numpy \
+	&& pip install vamp
 
-# set shell pointer to python executable
-ENV LD_LIBRARY_PATH /usr/local/lib
-
-# install python modules
-RUN bash ./install_python2_base_modules.sh
-
-# scripts cleanup
-RUN rm -rf ./install_*.sh
-
-CMD ["/bin/bash"]
+CMD ["/bin/sh"]
