fixing CI build

--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -41,6 +41,7 @@ testcases:
   hostname: "testcases"
   environment:
     AUDIOPYLE_BOOT_TIME: "10"
+    CI_BUILD: "1"
   links:
     - coordinator1
     - extractor1
