--- a/docker-compose-ci.yml
+++ b/docker-compose-ci.yml
@@ -6,9 +6,9 @@ rabbit1:
     RABBITMQ_DEFAULT_USER: "rabbitmq"
     RABBITMQ_DEFAULT_PASS: "rabbitmq"
     RABBITMQ_DEFAULT_VHOST: "/"
-mysql1:
+mysql_results:
   image: mysql:5.7
-  hostname: "mysql1"
+  hostname: "mysql_results"
   environment:
     - MYSQL_ROOT_PASSWORD=secret
     - MYSQL_USER=celery
@@ -21,7 +21,7 @@ coordinator1:
   hostname: "coordinator1"
   links:
     - rabbit1
-    - mysql1
+    - mysql_results
   ports:
     - "8080:8080"
   volumes:
@@ -32,7 +32,7 @@ extractor1:
   hostname: "extractor1"
   links:
     - rabbit1
-    - mysql1
+    - mysql_results
   volumes:
     - "./resources/vamp:/root/vamp"
     - "./resources/audio:/audio"
