--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - scripts/build_base_image.sh
   - scripts/build_app_images.sh
   - scripts/build_test_image.sh
-  - docker-compose -f docker-compose-ci.yml up --no-build --abort-on-container-exit --timeout 20 --exit-code-from testcases
+  - docker-compose -f scripts/docker-compose-ci.yml up --no-build --abort-on-container-exit --timeout 20 --exit-code-from testcases
 
 after_success:
   - docker run --interactive --tty --rm --env CODECLIMATE_CODE="$PWD" --volume "$PWD":/code --volume /var/run/docker.sock:/var/run/docker.sock --volume /tmp/cc:/tmp/cc codeclimate/codeclimate analyze
