--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,3 +36,8 @@ extractor_host_1:
   volumes:
     - "./resources/vamp:/root/vamp"
     - "./resources/audio:/audio"
+  environment:
+    - EXTRACTION_CONCURRENCY=2
+    - EXTRACTION_BROKER_CONN_POOL_SIZE=4
+    - EXTRACTION_SOFT_TIME_LIMIT_SECONDS=120
+    - EXTRACTION_HARD_TIME_LIMIT_SECONDS=600
